--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,21 +29,21 @@ body {
   position: relative;
 }
 body::before {
-  content: "";
+  /* content: "";
   position: fixed;
   inset: 0;
-  z-index: 0;
+  z-index: -30;
   pointer-events: none;
   background: #000;
-  opacity: 1;
+  opacity: 1; */
 }
 body::after {
-  content: "";
+  /* content: "";
   position: fixed;
   inset: 0;
-  z-index: 1;
+  z-index: -20;
   pointer-events: none;
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="none"><filter id="grain"><feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="4"/></filter><rect width="100" height="100" filter="url(%23grain)" opacity="0.18"/></svg>');
   opacity: 0.18;
-  mix-blend-mode: soft-light;
+  mix-blend-mode: soft-light; */
 }
